alignitem feature bug fixed

--- a/public/src/components/Modal/AlignCardsPosition.module.scss
+++ b/public/src/components/Modal/AlignCardsPosition.module.scss
@@ -33,10 +33,6 @@
   justify-content: space-between;
   padding: 5px 10px;
   border-bottom: 1px solid #e7e7e7;
-  cursor: move;
-  // &:last-child {
-  // border-bottom: none;
-  // }
   span {
     transition: 0.2s;
   }
